// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadDialog does not render if downloadMode is false 1`] = `<div />`;

exports[`DownloadDialog does not show download options if no browser support 1`] = `
<div>
  <div
    class="ui-Modal"
  >
    <div
      class="ui-ModalTitle"
    >
      Download map
    </div>
    <div
      class="ui-ModalContent"
    >
      <div
        class="modalContent"
      >
        Map download is not supported by your browser. Try Google Chrome or Firefox.
      </div>
    </div>
    <div
      class="ui-ModalActions"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="ui-Button"
        >
          Close
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDialog renders enabled showName, disabled showLegend 1`] = `
<div>
  <div
    class="ui-Modal"
  >
    <div
      class="ui-ModalTitle"
    >
      Download map
    </div>
    <div
      class="ui-ModalContent"
    >
      <div
        class="modalContent"
      >
        <div
          class="checkbox"
        >
          <label
            class="jsx-4249355495 dense"
            data-test="dhis2-uicore-checkbox"
          >
            <input
              checked=""
              class="jsx-4249355495"
              type="checkbox"
              value=""
            />
            <div
              class="jsx-4249355495 icon dense"
            >
              <svg
                class="jsx-4069423049 jsx-3997907426 checked"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="jsx-4069423049 jsx-3997907426 background"
                  height="14"
                  rx="2"
                  width="14"
                  x="0"
                  y="0"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 border"
                  d="M2,0 L12,0 C13.1045695,0 14,0.8954305 14,2 L14,12 C14,13.1045695 13.1045695,14 12,14 L2,14 C0.8954305,14 0,13.1045695 0,12 L0,2 C0,0.8954305 0.8954305,0 2,0 Z M2,1 C1.44771525,1 1,1.44771525 1,2 L1,12 C1,12.5522847 1.44771525,13 2,13 L12,13 C12.5522847,13 13,12.5522847 13,12 L13,2 C13,1.44771525 12.5522847,1 12,1 L2,1 Z"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 checkmark"
                  d="M10.3520005,3.30015877 L5.54268293,8.03252726 L3.64634146,6.16652726 L2.28668615,7.5044281 L5.54310367,10.7010587 L11.7145993,4.628307 L10.3520005,3.30015877 Z M5.54268293,9.43547274 L5.61193184,9.36733181 L5.54226219,9.29894127 L5.47309681,9.367 L5.54268293,9.43547274 Z M10.6496329,4.41023392 L10.6495057,4.35652297 L10.5648412,4.35672356 L10.2854007,4.631693 L10.3553166,4.69984123 L10.6496329,4.41023392 Z M3.42891348,7.22439304 L3.35030905,7.22439304 L3.35034135,7.27820863 L3.64634146,7.56947274 L3.71331385,7.5035719 L3.42891348,7.22439304 Z"
                />
                <rect
                  class="jsx-4069423049 jsx-3997907426 indeterminate"
                  height="2"
                  width="8"
                  x="3"
                  y="6"
                />
              </svg>
            </div>
            Show name
          </label>
        </div>
        <div
          class="checkbox"
        >
          <label
            class="jsx-4249355495 disabled dense"
            data-test="dhis2-uicore-checkbox"
          >
            <input
              checked=""
              class="jsx-4249355495"
              disabled=""
              type="checkbox"
              value=""
            />
            <div
              class="jsx-4249355495 icon dense"
            >
              <svg
                class="jsx-4069423049 jsx-3997907426 checked disabled"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="jsx-4069423049 jsx-3997907426 background"
                  height="14"
                  rx="2"
                  width="14"
                  x="0"
                  y="0"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 border"
                  d="M2,0 L12,0 C13.1045695,0 14,0.8954305 14,2 L14,12 C14,13.1045695 13.1045695,14 12,14 L2,14 C0.8954305,14 0,13.1045695 0,12 L0,2 C0,0.8954305 0.8954305,0 2,0 Z M2,1 C1.44771525,1 1,1.44771525 1,2 L1,12 C1,12.5522847 1.44771525,13 2,13 L12,13 C12.5522847,13 13,12.5522847 13,12 L13,2 C13,1.44771525 12.5522847,1 12,1 L2,1 Z"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 checkmark"
                  d="M10.3520005,3.30015877 L5.54268293,8.03252726 L3.64634146,6.16652726 L2.28668615,7.5044281 L5.54310367,10.7010587 L11.7145993,4.628307 L10.3520005,3.30015877 Z M5.54268293,9.43547274 L5.61193184,9.36733181 L5.54226219,9.29894127 L5.47309681,9.367 L5.54268293,9.43547274 Z M10.6496329,4.41023392 L10.6495057,4.35652297 L10.5648412,4.35672356 L10.2854007,4.631693 L10.3553166,4.69984123 L10.6496329,4.41023392 Z M3.42891348,7.22439304 L3.35030905,7.22439304 L3.35034135,7.27820863 L3.64634146,7.56947274 L3.71331385,7.5035719 L3.42891348,7.22439304 Z"
                />
                <rect
                  class="jsx-4069423049 jsx-3997907426 indeterminate"
                  height="2"
                  width="8"
                  x="3"
                  y="6"
                />
              </svg>
            </div>
            Show legend
          </label>
        </div>
      </div>
    </div>
    <div
      class="ui-ModalActions"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="ui-Button"
        >
          Cancel
        </div>
        <div
          class="ui-Button"
        >
          Download
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDialog renders with enabled showLegend 1`] = `
<div>
  <div
    class="ui-Modal"
  >
    <div
      class="ui-ModalTitle"
    >
      Download map
    </div>
    <div
      class="ui-ModalContent"
    >
      <div
        class="modalContent"
      >
        <div
          class="checkbox"
        >
          <label
            class="jsx-4249355495 dense"
            data-test="dhis2-uicore-checkbox"
          >
            <input
              checked=""
              class="jsx-4249355495"
              type="checkbox"
              value=""
            />
            <div
              class="jsx-4249355495 icon dense"
            >
              <svg
                class="jsx-4069423049 jsx-3997907426 checked"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="jsx-4069423049 jsx-3997907426 background"
                  height="14"
                  rx="2"
                  width="14"
                  x="0"
                  y="0"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 border"
                  d="M2,0 L12,0 C13.1045695,0 14,0.8954305 14,2 L14,12 C14,13.1045695 13.1045695,14 12,14 L2,14 C0.8954305,14 0,13.1045695 0,12 L0,2 C0,0.8954305 0.8954305,0 2,0 Z M2,1 C1.44771525,1 1,1.44771525 1,2 L1,12 C1,12.5522847 1.44771525,13 2,13 L12,13 C12.5522847,13 13,12.5522847 13,12 L13,2 C13,1.44771525 12.5522847,1 12,1 L2,1 Z"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 checkmark"
                  d="M10.3520005,3.30015877 L5.54268293,8.03252726 L3.64634146,6.16652726 L2.28668615,7.5044281 L5.54310367,10.7010587 L11.7145993,4.628307 L10.3520005,3.30015877 Z M5.54268293,9.43547274 L5.61193184,9.36733181 L5.54226219,9.29894127 L5.47309681,9.367 L5.54268293,9.43547274 Z M10.6496329,4.41023392 L10.6495057,4.35652297 L10.5648412,4.35672356 L10.2854007,4.631693 L10.3553166,4.69984123 L10.6496329,4.41023392 Z M3.42891348,7.22439304 L3.35030905,7.22439304 L3.35034135,7.27820863 L3.64634146,7.56947274 L3.71331385,7.5035719 L3.42891348,7.22439304 Z"
                />
                <rect
                  class="jsx-4069423049 jsx-3997907426 indeterminate"
                  height="2"
                  width="8"
                  x="3"
                  y="6"
                />
              </svg>
            </div>
            Show name
          </label>
        </div>
        <div
          class="checkbox"
        >
          <label
            class="jsx-4249355495 dense"
            data-test="dhis2-uicore-checkbox"
          >
            <input
              checked=""
              class="jsx-4249355495"
              type="checkbox"
              value=""
            />
            <div
              class="jsx-4249355495 icon dense"
            >
              <svg
                class="jsx-4069423049 jsx-3997907426 checked"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="jsx-4069423049 jsx-3997907426 background"
                  height="14"
                  rx="2"
                  width="14"
                  x="0"
                  y="0"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 border"
                  d="M2,0 L12,0 C13.1045695,0 14,0.8954305 14,2 L14,12 C14,13.1045695 13.1045695,14 12,14 L2,14 C0.8954305,14 0,13.1045695 0,12 L0,2 C0,0.8954305 0.8954305,0 2,0 Z M2,1 C1.44771525,1 1,1.44771525 1,2 L1,12 C1,12.5522847 1.44771525,13 2,13 L12,13 C12.5522847,13 13,12.5522847 13,12 L13,2 C13,1.44771525 12.5522847,1 12,1 L2,1 Z"
                />
                <path
                  class="jsx-4069423049 jsx-3997907426 checkmark"
                  d="M10.3520005,3.30015877 L5.54268293,8.03252726 L3.64634146,6.16652726 L2.28668615,7.5044281 L5.54310367,10.7010587 L11.7145993,4.628307 L10.3520005,3.30015877 Z M5.54268293,9.43547274 L5.61193184,9.36733181 L5.54226219,9.29894127 L5.47309681,9.367 L5.54268293,9.43547274 Z M10.6496329,4.41023392 L10.6495057,4.35652297 L10.5648412,4.35672356 L10.2854007,4.631693 L10.3553166,4.69984123 L10.6496329,4.41023392 Z M3.42891348,7.22439304 L3.35030905,7.22439304 L3.35034135,7.27820863 L3.64634146,7.56947274 L3.71331385,7.5035719 L3.42891348,7.22439304 Z"
                />
                <rect
                  class="jsx-4069423049 jsx-3997907426 indeterminate"
                  height="2"
                  width="8"
                  x="3"
                  y="6"
                />
              </svg>
            </div>
            Show legend
          </label>
        </div>
        <div
          class="root"
        >
          <label
            class="label"
          >
            Legend position
          </label>
          <div
            class="position"
          >
            <div
              class="legend topleft"
            />
          </div>
          <div
            class="position"
          >
            <div
              class="legend topright"
            />
          </div>
          <div
            class="position"
          >
            <div
              class="legend bottomleft"
            />
          </div>
          <div
            class="position selected"
          >
            <div
              class="legend bottomright"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui-ModalActions"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="ui-Button"
        >
          Cancel
        </div>
        <div
          class="ui-Button"
        >
          Download
        </div>
      </div>
    </div>
  </div>
</div>
`;
